--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Welcom!</h1>
+        		<h1>Welcome!</h1>
 				<p>Introduction blurb goes here</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
