Trying new theme

--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Engineering Makerspace - Lakehead University</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Welcome!</h1>
-				<p>Introduction blurb goes here</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:makerspace.eni@gmail.com">email Us</a></li>
-        		<li><a href="https://github.com/LakeheadMakerspace">github.com/LakeheadMakerspace</a></li>
-			</ul>
-		</footer>
-	</body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Sunset as a Service</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+        crossorigin="anonymous">
+    <style>
+        .page-background {
+            background: url(./photo.jpg) no-repeat center center;
+            background-size: cover;
+            height: 100vh;
+        }
+        .cta {
+            position: relative;
+            top: 35%;
+            transform: translateY(-35%);
+            background: rgba(0, 0, 0, 0.5);
+            padding: 5rem;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="page-background">
+        <div class="cta container rounded text-center text-white">
+            <h1>Sunsets as a Service</h1>
+            <p class="lead p-3">
+                Deliver rich, brilliant experiences with the world's first sunset service, coming soon.
+            </p>
+        </div>
+    </div>
+</body>
+
 </html>
