--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sunset as a Service</title>
+    <title>Engineering Makerspace - Lakehead University</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
     <style>
         .page-background {
-            background: url(./photo.jpg) no-repeat center center;
+            background: url(./img/ATAC.jpg) no-repeat center center;
             background-size: cover;
             height: 100vh;
         }
@@ -27,9 +26,10 @@
 <body>
     <div class="page-background">
         <div class="cta container rounded text-center text-white">
-            <h1>Sunsets as a Service</h1>
+            <h1>Lakehead Engineering Makerspace</h1>
             <p class="lead p-3">
-                Deliver rich, brilliant experiences with the world's first sunset service, coming soon.
+                Contact:
+								
             </p>
         </div>
     </div>
