--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
         <div class="cta container rounded text-center text-white">
             <h1>Lakehead Engineering Makerspace</h1>
             <p class="lead p-3">
-                Contact:
-								
+                Contact us for more information:
+		<form method="POST" action="https://formspree.io/makerspace.engi@lakeheadu.ca">
+  			<input type="email" name="email" placeholder="Your email">
+  			<textarea name="message" placeholder="Your message"></textarea>
+  		<button type="submit">Send</button>
+		</form>					
             </p>
         </div>
     </div>
