--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div class="cta container rounded text-center text-white">
             <h1>Lakehead Engineering Makerspace</h1>
             <p class="lead p-3">
-                Contact us for more information:
+                Contact us for more information:<br>
 		<form method="POST" action="https://formspree.io/makerspace.engi@lakeheadu.ca">
-  			<input type="email" name="email" placeholder="Your email">
+  			<input type="email" name="email" placeholder="Your email"><br>
   			<textarea name="message" placeholder="Your message"></textarea>
   		<button type="submit">Send</button>
 		</form>					
