--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <p class="lead p-3">
                 Contact us for more information:<br>
 		<form method="POST" action="https://formspree.io/makerspace.engi@lakeheadu.ca">
-  			<input type="email" name="email" placeholder="Your email"><br>
-  			<textarea name="message" placeholder="Your message"></textarea>
+  			<input type="email" name="email" placeholder="Your email"><br><br>
+  			<textarea name="message" placeholder="Your message"></textarea> <br>
   		<button type="submit">Send</button>
 		</form>					
             </p>
